added template for Blindtex from slate template

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,700italic,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,700,700italic' rel='stylesheet' type='text/css'>
 
-    <title>Slate : A responsive theme for GitHub Pages</title>
+    <title>Blindex</title>
   </head>
 
   <body>
@@ -22,7 +22,7 @@
         <header class="inner">
           <a id="forkme_banner" href="repository_url}}">View on GitHub</a>
 
-          <h1 id="project_title">Slate</h1>
+          <h1 id="project_title">Blindtex</h1>
           <h2 id="project_tagline">A responsive theme for GitHub Pages</h2>
         </header>
     </div>
