--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/blindtex.png" alt="" /></span>
+						<span class="logo"><img src="images/blindtex.png" alt="logo de blindtex" /></span>
 						<p>Herramientas de accesibilidad de latex, especializada para personas invidentes.</p>
 					</header>
 
@@ -25,9 +25,10 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Inicio</a></li>
-							<li><a href="#first">Sobre el proyecto</a></li>
-							<li><a href="#second">Financiación y apoyos</a></li>
-							<li><a href="#cta">Decargar herramienta</a></li>
+							<li><a href="#first">Proyecto</a></li>
+							<li><a href="#second">Apoyos</a></li>
+							<li><a href="#desc">Descripci&oacute;n</a></li>
+							<li><a href="#cta">Descarga </a></li>
 						</ul>
 					</nav>
 
@@ -41,11 +42,11 @@
 										<header class="major">
 											<h2>Inicio</h2>
 										</header>
-										<p>BlindTex es un proyecto promovido por la Universidad Nacional de Colombia, para el desarrollo de una 
-										herramienta para invidentes que facilita la lectura documentos en LaTex, permiteindo una lectura m&aacute;s 
-										clara de las ecuaciones existentes en el documento.</p>
+										<p>BlindTex es un proyecto impulsado desde la Universidad Nacional de Colombia , para el desarrollo de una 
+										herramienta dirigida a personas    invidentes que facilita la lectura de  documentos escritos en  LaTeX, permitiendo una lectura m&aacute;s 
+										clara y accesible de las ecuaciones matem&aacute;ticas en el documento.</p>
 									</div>
-									<span class="image"><img src="images/TexLogo.png" alt="" /></span>
+
 								</div>
 							</section>
 
@@ -54,56 +55,89 @@
 								<header class="major">
 									<h2>Sobre el proyecto</h2>
 								</header>
-								<ul class="features">
-									<li>
-										<span class="icon major style1 fa-code"></span>
-										<h3>Desarrolladores</h3>
-										<p>BlindTex es un proyecto de c&oacute;digo abierto, visita nuestro <a target="_blank" href="https://github.com/blindtex/blindtex">repositorio</a>.</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-braille"></span>
-										<h3>D&eacute;janos tus comentarios</h3>
-										<p>Tu opini&oacute;n es importante para nosotros, env&iacute;anos tus cometarios a blindtexunal@gmail.com</p>
-									</li>
-								</ul>
-								<footer class="major">
-								</footer>
+										<p> La accesibilidad de documentos con simbolog&iacute;a matem&aacute;tica para personas con discapacidad visual 
+										es un reto que todav&iacute;a no est&aacute; del todo resuelto. Esto hace que la completa integraci&oacute;n de los ciegos en el &aacute;mbito universitario
+										y profesional, sobre todo  en &aacute;reas relacionadas con las ciencias ex&aacute;ctas, no sea completa.</p>
+									<div><span class="image"><img src="images/TexLogo.png" alt="logo de tex" /></span></div>
+										<p> El c&oacute;digo LaTeX es una herramienta indispensable para la edici&oacute;n de textos matem&aacute;ticos en estos   &aacute;mbitos. De aqu&iacute; que surge la necesidad de hacer accesible y amigable la lectura de documentos generados con este c&oacute;digo.</p>
+
+										<p> Los objetivos y  beneficios de blindtex son:</p>
+										<ul>
+										<li> Permitir el intercambio accesible de documentos entre personas videntes e invidentes sin necesidad de cambiar la forma en que se genera este tipo de documentos.</li>
+										<li>Permitir el acceso a una cantidad de informaci&oacute;n especializada disponible en repositorios como <a href='https://arxiv.org'>arXiv.org</a>  u otras fuentes profesionales de documentaci&oacute;n matem&aacute;tica.</li>
+										<li> Permitir la generaci&oacute;n de notas propias, trabajos o ex&aacute;menes, por parte de  personas invidentes en este formato de manera tal que puedan ser consultadas o compartidas  posteriormente.</li>
+									</ul>
+
+
+
 							</section>
 
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Financiación y apoyos</h2>
+									<h2>Financiaci&oacute;n y apoyos</h2>
 									<span class="logo"><a title="LogoUnal" target="_blank" href="http://unal.edu.co/"> <img src="images/LogoUnal.png"  style="max-width: 70%"/> </a></span>
-									<p></p>
-									<p>BlindTex es un proyecto de c&oacute;digo abierto financiado por la Uniersidad Nacional de Colombia.<br />
-									</p>
 								</header>
+									<p>BlindTex es un proyecto de c&oacute;digo abierto financiado por la Universidad Nacional de Colombia, a trav&eacute;s de la Convocatoria Nacional de Extensi&oacute;n Solidaria: "Innovaci&oacute;n Social para la Paz". Con estos proyectos se trata de estrechar los v&iacute;nculos entre la Academia  y diversos sectores de la sociedad en busca de la inclusi&oacute;n social  y mejoramiento de la calidad de vida de comunidades vulnerables como aporte a la construci&oacute;n de paz. La Universidad Nacional de Colombia est&aacute; fuertemente comprometida a apoyar proyectos  de car&aacute;cter cient&iacute;fico, tecnol&oacute;gico, art&iacute;stico y cultural  de alto imp&aacute;cto que vayan en este sentido. 
+									</p>
+								<p> M&aacute;s concretamente, la puesta en marcha del proyecto blindtex es uno de los objetivos de uno de los proyectos ganadores de la convocatoria mencionada m&aacute;s arriba, con t&iacute;tulo "Desarrollo de Herramientas y Protocolos para la Accesibilidad de Documentos Matem&aacute;ticos en el &Aacute;mbito de las Ciencias Ex&aacute;ctas y Naturales en la Universidad Nacional de Colombia", dirigido desde el Departamento de F&iacute;sica de la Facultad de Ciencias, y con colaboraci&oacute;n de voluntarios, estudiantes y egresados de esta misma Universidad as&iacute; como de la Universidad de Anti&oacute;quia, instituci&oacute;n de la cual este proyecto tiene el aval.</p>
+
+
 							</section>
 
+
+
+
 						<!-- Get Started -->
+							<section id="desc" class="main special">
+								<header class="major">
+									<h2>Descripci&oacute;n</h2>
+								</header>
+
+									<p>La aplicaci&oacute;n blindtex consta de una interfaz gr&aacute;fica que permite la traducci&oacute;n a lenguaje natural ecuaciones escritas en c&oacute;digo LaTeX, tanto en modo aislado como en un archivo LaTeX completo:</p>
+									<ul><li>Modo aislado o de prueba: Este modo se inicializa por defecto y permite escribir el c&oacute;digo LaTeX de tipo matem&aacute;tico en el campo de texto disponible. Posteriormente el usuario puede convertir este c&oacute;digo a texto literal que describe la ecuaci&oacute;n en lenguaje natural. Tambi&eacute;n es posible convertir el c&oacute;digo a formato HTML permitiendo al usuario navegar linealmente por la ecuaci&oacute;n con el navegador web predeterminado por el usuario.
+								</li>
+										<li> Modo documento: En este modo el usuario puede cargar un documento latex completo y convertirlo a formato HTML  donde la simbolog&iacute;a matem&aacute;tica se ha transformado a lenguaje natural navegable linealmente con su navegador web.</li>
+									</ul>
+								<p> Adem&aacute;s la aplicaci&oacute;n permite personalizar los diccionarios usados para la traducci&oacute;n a lenguaje natural de forma que pueda leer la ecuaci&oacute;n en la forma acostrumbrada. Por &uacute;ltimo, la herramienta da la posibilidad de usar la l&iacute;nea de comandos para realizar las acciones citadas con la interfaz gr&aacute;fica.</p>
+							<p> Para que las conversiones sean &oacute;ptimas el c&oacute;digo LaTeX debe ser correcto, es decir, un compilador LaTeX debe interpretar correctamente el c&oacute;digo sin generar errores. Cualquier inconsistencia generada por la incorrecci&oacute;n del c&oacute;digo o por que algunos comandos no est&eacute;n considerados en la traducci&oacute;n , la aplicaci&oacute;n generar&aacute; un archivo con la lista de las ecuaciones problem&aacute;ticas, de modo que el usuario puede ver y corregir el c&oacute;digo o a&ntilde;adir nuevos comandos al diccionario.</p>
+							<p> Esta aplicaci&oacute;n est&aacute; todav&iacute;a en una etapa inicial de desarrollo, por lo que se debe tener en cuenta que el c&oacute;digo LaTeX  abarcado por la traducci&oacute;n no es demasiado exhaustiva y los modos de uso ser&aacute;n mejorados en el futuro. Por esto mismo es muy importante las sugerencias y feedback de los usuarios.</p>
+							   
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Descargar herramienta</h2>
+									<h2>Descarga e instalaci&oacute;n</h2>
 								</header>
+								<p> Por el momento disponemos de instalador para Windows. Haga click abajo para descargar y siga las instrucciones del asistente de instalaci&oacute;n al ejecutar el instalador:</p>
+							<div>
+
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-windows"></span>
-										<h3><a target="_blank" href="https://drive.google.com/open?id=1yHQsZQMZe-vyZjnq2MNK-e_V__JzEOR9">Windows</a><h3>
+										<span class="icon major style1 fa-windows" aria-label='icono de Windows'></span>
+										<h3><a target="_blank" href="https://drive.google.com/open?id=1yHQsZQMZe-vyZjnq2MNK-e_V__JzEOR9">Descargar instalador para Windows</a><h3>
 									</li>
 								</ul>
+							</div>
+						<p> Para el resto de plataformas  recomendamos una instalaci&oacute;n manual. Para ello es necesario descargar el c&oacute;digo fuente del <a href='https://github.com/blindtex/blindtex'> repositorio</a>, y resolver las dependencias necesarias. Es necesario tener instalado python 2.7 con los m&oacute;dulos wxpython y ply, y tambi&eacute;n LaTeXML que requiere a su vez tener instalado  perl.</p> 
 							</section>
 
 					</div>
 
 				<!-- Footer -->
+
 					<footer id="footer">
-						<div id="wrapper">
-							<ul class="icons"><!--
-								<li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>-->
-							</ul>
+						<div class='wrapper'>
+								<ul class="features">
+									<li>
+										<span class="icon major style1 fa-code" aria-label='icono de c&oacute;digo'></span>
+										<h3>Desarrolladores</h3>
+										<p>BlindTex es un proyecto de c&oacute;digo abierto, visita nuestro <a target="_blank" href="https://github.com/blindtex/blindtex">repositorio</a>.</p>
+									</li>
+									<li>
+										<span class="icon major style3 fa-braille" aria-label='feedback'></span>
+										<h3>D&eacute;janos tus comentarios</h3>
+										<p>Tu opini&oacute;n es importante para nosotros, env&iacute;anos tus comentarios a blindtexunal@gmail.com</p>
+									</li>
+								</ul>
 						</div>
 					</footer>
 
