Agregado instructivo LateXML
Agregada guía de instalación de LateXML

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								</div>
 							</section>
 
-						<!-- First Section -->
+						<!-- Sobre el proyecto -->
 							<section id="first" class="main special">
 								<header class="major">
 									<h2>Sobre el proyecto</h2>
@@ -72,7 +72,7 @@
 
 							</section>
 
-						<!-- Second Section -->
+						<!-- Financiación y apoyos -->
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Financiaci&oacute;n y apoyos</h2>
@@ -88,7 +88,7 @@
 
 
 
-						<!-- Get Started -->
+						<!-- Descripción -->
 							<section id="desc" class="main special">
 								<header class="major">
 									<h2>Descripci&oacute;n</h2>
@@ -102,12 +102,14 @@
 								<p align="justify">Adem&aacute;s la aplicaci&oacute;n permite personalizar los diccionarios usados para la traducci&oacute;n a lenguaje natural de forma que pueda leer la ecuaci&oacute;n en la forma acostrumbrada. Por &uacute;ltimo, la herramienta da la posibilidad de usar la l&iacute;nea de comandos para realizar las acciones citadas con la interfaz gr&aacute;fica.</p>
 								<p align="justify"> Para que las conversiones sean &oacute;ptimas el c&oacute;digo LaTeX debe ser correcto, es decir, un compilador LaTeX debe interpretar correctamente el c&oacute;digo sin generar errores. Cualquier inconsistencia generada por la incorrecci&oacute;n del c&oacute;digo o por que algunos comandos no est&eacute;n considerados en la traducci&oacute;n , la aplicaci&oacute;n generar&aacute; un archivo con la lista de las ecuaciones problem&aacute;ticas, de modo que el usuario puede ver y corregir el c&oacute;digo o a&ntilde;adir nuevos comandos al diccionario.</p>
 								<p align="justify"> Esta aplicaci&oacute;n est&aacute; todav&iacute;a en una etapa inicial de desarrollo, por lo que se debe tener en cuenta que el c&oacute;digo LaTeX  abarcado por la traducci&oacute;n no es demasiado exhaustiva y los modos de uso ser&aacute;n mejorados en el futuro. Por esto mismo es muy importante las sugerencias y feedback de los usuarios.</p>
-							   
+							 
+						<!-- descarga e instalación --> 
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Descarga e instalaci&oacute;n</h2>
 								</header>
-								<p align="justify"> Por el momento disponemos de instalador para Windows. Haga click abajo para descargar y siga las instrucciones del asistente de instalaci&oacute;n al ejecutar el instalador:</p>
+								<p align="justify">Para poder utilzar la conversión de documento de BlindTex, es necesiario instalar LaTeXML. Si lo requiere pude ver nuestra gi&iacute;a de haciendo clic <a target="_blank" href="GuiaLateXML.html">aqu&iacute;<a>.</p>
+								<p align="justify">Por el momento disponemos de instalador para Windows. Haga click abajo para descargar y siga las instrucciones del asistente de instalaci&oacute;n al ejecutar el instalador:</p>
 							<div>
 								<span class="icon major style1 fa-windows" aria-label='icono de Windows'></span>
 								<h3><a target="_blank" href="https://drive.google.com/file/d/17b9zfLl4a9ARhN9xjjTYWi63if303Kkf/view">Descargar instalador para Windows</a><h3>
