corrección de ortografía

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 								<header class="major">
 									<h2>Descarga e instalaci&oacute;n</h2>
 								</header>
-								<p align="justify">Para poder utilizar la conversión de documentos de BlindTex, es necesiario instalar LaTeXML. Si lo requiere pude ver nuestra gu&iacute;a de haciendo clic <a target="_blank" href="GuiaLateXML.html">aqu&iacute;<a>.</p>
+								<p align="justify">Para poder utilizar la conversión de documentos de BlindTex, es necesario instalar LaTeXML. Si lo requiere puede ver nuestra gu&iacute;a de haciendo clic <a target="_blank" href="GuiaLateXML.html">aqu&iacute;<a>.</p>
 								<p align="justify">Por el momento disponemos de instalador para Windows. Haga click abajo para descargar y siga las instrucciones del asistente de instalaci&oacute;n al ejecutar el instalador:</p>
 							<div>
 								<span class="icon major style1 fa-windows" aria-label='icono de Windows'></span>
